--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
+    "doc:generate": "npx typedoc --entryPointStrategy Expand src",
     "build": "NODE_ENV=production tsup --config tsup.config.ts",
     "dev": "NODE_ENV=development tsup --config tsup.config.ts",
     "format": "prettier --write .",
@@ -57,6 +58,7 @@
     "prettier": "^3.4.2",
     "ts-jest": "^29.2.5",
     "tsup": "^8.3.5",
+    "typedoc": "^0.27.6",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.19.1",
     "zod": "^3.24.1"
