--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
-  "name": "core",
+  "name": "@torch-finance/core",
   "version": "0.0.0",
-  "description": "",
+  "description": "Basic core classes for Torch Finance",
   "packageManager": "pnpm@10.0.0",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/torch-core/core.git"
+  },
+  "bugs": {
+    "url": "https://github.com/torch-core/core/issues"
+  },
+  "author": {
+    "name": "Alan",
+    "email": "alan890104@gmail.com"
+  },
   "engines": {
     "node": ">=22"
   },
