chore: Update GitHub Actions workflow to trigger on main branch push
- Added a push trigger for the main branch to the build-site workflow.
- Configured permissions for write access to contents.
- Introduced concurrency settings to manage workflow runs effectively.

--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -1,5 +1,8 @@
 name: Build Site
 on:
+  push:
+    branches:
+      - main
   release:
     types: [published]
 
@@ -7,6 +10,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: Build Site
+    permissions:
+      contents: write
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
